# Employee-AI

./: .env.example  .gitignore  .mcp.json  README.md  orchestrator.py  pyproject.toml  ralph_wiggum.py  scheduler.py  service_manager.py  skills-lock.json  start.bat  start_dashboard.bat  start_demo.py  start_full.bat  start_server.bat  status_server.bat  stop_server.bat  web_dashboard.py
.claude/: settings.json
.claude/skills/cloud-agent/: SKILL.md
.claude/skills/cross-domain/: SKILL.md
.claude/skills/email-mcp/: SKILL.md
.claude/skills/gmail-watcher/: SKILL.md
.claude/skills/hitl-workflow/: SKILL.md
.claude/skills/linkedin-poster/: SKILL.md
.claude/skills/odoo-mcp/: SKILL.md
.claude/skills/platinum-demo/: SKILL.md
.claude/skills/ralph-wiggum/: SKILL.md
.claude/skills/reasoning-loop/: SKILL.md
.claude/skills/social-media/: SKILL.md
.claude/skills/vault-manager/: SKILL.md
.claude/skills/vault-sync/: SKILL.md
.claude/skills/weekly-audit/: SKILL.md
.claude/skills/whatsapp-watcher/: SKILL.md
.obsidian/: graph.json  workspace.json
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Signals/: health_cloud.json
audit/: __init__.py  audit_logger.py  weekly_audit.py
cloud/: __init__.py  claim_manager.py  health_monitor.py  orchestrator_cloud.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
hooks/: stop_hook.py
linkedin/: __init__.py  post_generator.py
mcp_servers/: __init__.py  email_mcp.py  odoo_mcp.py  social_mcp.py
odoo/: __init__.py  client.py
recovery/: __init__.py  retry_handler.py
scripts/: setup_cloud.sh
social/: __init__.py  facebook_poster.py  twitter_poster.py
sync/: __init__.py  signal_processor.py  vault_sync.py
watchers/: __init__.py  approval_watcher.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  whatsapp_watcher.py
